--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2379,9 +2379,50 @@ input, select, textarea {
 		opacity: 1;
 	}
 
+.site-title {
+    position: absolute;
+    top: 1em;
+    right: 1em;
+    font-size: 30px;
+    font-weight: bold;
+}
+
 /* Nav */
+.navbar {
+	height: 5.5em;
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+    /* background-color: #333; */
+    padding: 15px;
+    align-items: left;
+}
+
+
+.top-row a,
+.bottom-row a {
+    text-decoration: none;
+    color: black; /* Change the color to black */
+    margin-right: 20px; /* Adjust spacing between links */
+    margin-left: 10px;
+
+}
+/* Optional: To align items to the right */
+.top-row {
+    display: flex;
+    justify-content: flex-start;
+    margin-bottom: .2em
+}
+
+.bottom-row {
+    display: flex;
+    justify-content: left;
+}
+
 
 	#nav {
+		display: flex;
+    	justify-content: space-between;
 		position: absolute;
 		top: 0;
 		left: 0;
@@ -2391,6 +2432,7 @@ input, select, textarea {
 		z-index: 1;
 		overflow: hidden;
 	}
+	
 
 		#nav > ul {
 			line-height: 0px;
@@ -2398,8 +2440,8 @@ input, select, textarea {
 			display: inline-block;
 			margin: 0;
 			height: 21px;
-			border-left: solid 1px rgba(192, 192, 192, 0.35);
-			border-right: solid 1px rgba(192, 192, 192, 0.35);
+			border-left: solid 0px rgba(192, 192, 192, 0.35);
+			border-right: solid 0px rgba(192, 192, 192, 0.35);
 		}
 
 			#nav > ul:before, #nav > ul:after {
@@ -2410,8 +2452,8 @@ input, select, textarea {
 				top: 50%;
 				margin-top: -2px;
 				height: 5px;
-				border-top: solid 1px rgba(192, 192, 192, 0.35);
-				border-bottom: solid 1px rgba(192, 192, 192, 0.35);
+				border-top: solid 0px rgba(192, 192, 192, 0.35);
+				border-bottom: solid 0px rgba(192, 192, 192, 0.35);
 			}
 
 			#nav > ul:before {
